<resources>
    <string name="app_name">Let\'s Chat</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="settings">Settings</string>
    <string name="all_users">All Users</string>
    <string name="register">REGISTER</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_lets_chat_app">Welcome To Lets Chat App</string>
    <string name="alreday_have_an_account">ALREDAY HAVE AN ACCOUNT</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends_page">Friends Page</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="display_name">Display Name</string>
    <string name="default_status">Hii,i am using chat app</string>
    <string name="save_change">Save Changes</string>
    <string name="your_status">your status</string>
    <string name="send_friend_request">send friend request</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="title_activity_share_location">Map</string>
    <string name="username">username</string>
    <string name="Username">Username</string>
    <string name="share">share</string>
    <string name="enter_message">Enter message</string>
    <string name="todo">TODO</string>

</resources>
