<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4A2B9"

    tools:context=".settingsActivity">


    <Button
        android:id="@+id/setting_change_image_button"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:background="@android:color/white"
        android:text="@string/change_image"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_status"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/setting_change_status_button"
        android:layout_width="164dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="55dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/setting_change_image_button"
        app:layout_constraintTop_toBottomOf="@+id/setting_status"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/setting_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"

        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_display_image" />

    <TextView
        android:id="@+id/setting_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/default_status"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_display_name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_display_image"
        android:layout_width="391dp"
        android:layout_height="317dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingAppBar" />

    <include
        android:id="@+id/settingAppBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>